leo3/tests/ui/type_mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/type_mismatch.rs:12:36
   |
12 |         let _ = LeanString::cstr(&n);
   |                 ---------------- ^^ expected `&LeanBound<'_, LeanString>`, found `&LeanBound<'_, LeanNat>`
   |                 |
   |                 arguments to this function are incorrect
   |
   = note: expected reference `&LeanBound<'_, leo3::types::LeanString>`
              found reference `&LeanBound<'_, leo3::types::LeanNat>`
note: associated function defined here
  --> src/types/string.rs
   |
   |     pub fn cstr<'l>(obj: &LeanBound<'l, Self>) -> LeanResult<&'l str> {
   |            ^^^^
